# venture-o-matic

./: .gitignore  README.md  alembic.ini  bot.py  db.py  loader.py  models.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0ced7a44630f_levels.py  55bc71744354_location.py  7914f7355765_add_inventory_and_professions.py  fc7bd44d6e3c_init.py
cogs/: adventure.py  characters.py  crafting.py  economy.py  equipment.py  location.py  marketplace.py  professions.py  pvp.py  utils.py
data/: affixes.yaml  character.yaml  crafting.yaml  items.yaml  locations.yaml  professions.yaml  rarity_rolls.yaml  shops.yaml
engine/: creature_engine.py  fight_engine.py
locales/: en.yaml  sk.yaml
schemas/: character.schema.yaml  item_types.schema.yaml  items.schema.json  items.schema.yaml  locations.schema.yaml
scripts/: generate_models.py
